--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,19 @@
 __pycache__
-*.pyc
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info
+dist
+build
+eggs
+parts
+bin
+var
+sdist
+develop-eggs
+.installed.cfg
+lib
+lib64
